# labsOS_2025

./: .gitignore  README.md
lab1OS/src/: parent.cpp  systemCall.cpp
lab2/include/: matrix.h
lab2/report/src/: benchmark.tex  src.tex  titlepage.tex
lab2/src/: matrix.cpp
lab3/report_OS/src/: benchmark.tex  problem.tex  thinks.tex
lab3/src/: child1.cpp  parent.cpp
lab4/: CMakeLists.txt
lab4/include/: PiCalc.hpp  Sorter.hpp
lab4/lib1/: BubbleSort.cpp  PiLeibniz.cpp
lab4/lib2/: PiWallis.cpp  QuickSort.cpp
lab4/prog1/: main.cpp
lab4/prog2/: DynamicLoader.cpp  DynamicLoader.hpp  main.cpp
lab4/report_OS4/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
labsOS_2025/lab2/: CMakeLists.txt  main.cpp
labsOS_2025/lab2/include/: threads.h
labsOS_2025/lab2/report/src/: literature.tex  problem.tex  thinks.tex
labsOS_2025/lab2/src/: threads.cpp
labsOS_2025/lab3/: CMakeLists.txt
labsOS_2025/lab3/include/: systemCall.h
labsOS_2025/lab3/report_OS/: strace.txt
labsOS_2025/lab3/report_OS/src/: literature.tex  src.tex  titlepage.tex
labsOS_2025/lab3/src/: child2.cpp  parent.cpp  systemCall.cpp
report_OS/src/: titlepage.tex
